tests/neg/i15000.check
-- [E006] Not Found Error: tests/neg/i15000.scala:19:11 ----------------------------------------------------------------
19 |    str(x, barY) // error
   |           ^^^^
   |           Not found: barY
   |
   | longer explanation available when compiling with `-explain`
-- [E006] Not Found Error: tests/neg/i15000.scala:20:9 -----------------------------------------------------------------
20 |    c(x, barY) // error // error
   |         ^^^^
   |         Not found: barY
   |
   | longer explanation available when compiling with `-explain`
-- [E008] Not Found Error: tests/neg/i15000.scala:20:4 -----------------------------------------------------------------
20 |    c(x, barY) // error // error
   |    ^
   |value apply is not a member of object ExtensionMethodReproduction.c.
   |An extension method was tried, but could not be fully constructed:
   |
   |    apply(ExtensionMethodReproduction.c)    failed with
   |
   |        Ambiguous overload. The overloaded alternatives of method apply in object ExtensionMethodReproduction with types
   |        
   |         apply(c: C)(x: Int, y: Int): String
   |        
   |         apply(c: C)(x: Int, y: String): String
   |        
   |        where
   |          C      is ExtensionMethodReproduction.C
   |        both match arguments (ExtensionMethodReproduction.c.type)
